# pinboard-bookmarks-mcp-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  TEST_HARNESS.md  claude-desktop-config.json  debug_bookmarks.py  pyproject.toml  test_mcp_harness.py  test_mcp_harness_mock.py  test_precommit.txt
.claude/: settings.local.json
.github/workflows/: README.md  ci.yml  publish-trusted.yml
docs/: pinboard_mcp_server_prd.md
examples/claude-desktop/: README.md  config-custom-port.json  config-dev.json  config.json
scripts/: build.sh  dev-setup.sh
src/pinboard_mcp_server/: __init__.py  client.py  main.py  models.py  tools.py
tests/: __init__.py  conftest.py  debug_bookmarks.py  test_client.py  test_integration.py  test_models.py  test_tools.py
